@@ -64,8 +64,9 @@ dxJoint::~dxJoint()
 
 bool dxJoint::isEnabled() const
 {
-    return ( node[0].body->invMass > 0 ||
-             (node[1].body && node[1].body->invMass > 0) );
+    return ( (flags & dJOINT_DISABLED) == 0 &&
+             (node[0].body->invMass > 0 ||
+             (node[1].body && node[1].body->invMass > 0)) );
 }
 
 //****************************************************************************
